--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
+    "framer-motion": "^12.23.9",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
