CHORE: Refactor build script in package.json for CI

--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "start": "react-scripts start",
+  "install": "npm install",
+  "build-step": "react-scripts build",
+  "build": "npm run install && npm run build-step",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
