--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,7 @@
   },
   "scripts": {
   "start": "react-scripts start",
-  "install": "npm install",
-  "build-step": "react-scripts build",
-  "build": "npm run install && npm run build-step",
+  "build": "react-scripts build",
   "test": "react-scripts test",
   "eject": "react-scripts eject"
   },
